--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,8 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="/assets/imgs/ci-logo.png">
+  <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
 </head>
 <body class="sidebar-mini sidebar-collapse">
   <app-root></app-root>
